overflow issue

--- a/dbs/css/sass/_desktop.scss
+++ b/dbs/css/sass/_desktop.scss
@@ -17,6 +17,7 @@ body {
 section {
 	position: relative;
 	padding: 100px 0;
+	overflow: hidden;
 }
 .container {
 	max-width: 1200px;
