--- a/dbs/css/style.css
+++ b/dbs/css/style.css
@@ -258,7 +258,8 @@ body {
 
 section {
   position: relative;
-  padding: 100px 0; }
+  padding: 100px 0;
+  overflow: hidden; }
 
 .container {
   max-width: 1200px;
